--- a/section_scikit_docs_By_combining__.tex
+++ b/section_scikit_docs_By_combining__.tex
@@ -4,18 +4,15 @@ By combining the predictions of a set of base learners the overall generalizatio
 
 By combining base learners in a randomized, the robustness of the overall estimator is improved with a minor loss in the model's bias. The opposite can be said about boosting methods, where the estimator's bias is greatly reduced whilst the model increass its generalization rate. Variance has to be carefully looked upon in these kind of models.
 
+There exist a wide range of Random Forests variants in the literature \cite{breiman-randomforests} where the difference lies on how randomization is applied to the base learners. In most cases this means that during runtime, samples will be selected on the features and on the \textit{rows} of the dataset. We will not survey all of the different variations but some of the methods are as follows:
 
+\begin{itemize}
+    \item Bootstrapping on rows at each node.
+    \item Sampling on rows at each node.
+    \item Sampling features to build each individual tree.
+    \item Sampling features and rows when building a base learner.
+\end{itemize}
 
-
-\textit{As they provide a way to reduce overfitting, bagging methods work best with strong and complex models (e.g., fully developed decision trees), in contrast with boosting methods which usually work best with weak models (e.g., shallow decision trees).}
-
-\textit{Bagging methods come in many flavours but mostly differ from each other by the way they draw random subsets of the training set. As a general rule, randomness is applied either to the ‘rows’ or ‘columns’ of the dataset i.e. samples or features:    
-• When random subsets of the dataset are drawn as random subsets of the samples, then this algorithm is known as Pasting [L. Breiman, “Pasting small votes for classification in large databases and on-line”, Machine Learning, 36(1), 85-103, 1999.].
-• When samples are drawn with replacement, then the method is known as Bagging [L. Breiman, “Bagging predictors”, Machine Learning, 24(2), 123-140, 1996.].
-• When random subsets of the dataset are drawn as random subsets of the features, then the method is known as Random Subspaces [H1998].
-• Finally, when base estimators are built on subsets of both samples and features, then the method is known as
-Random Patches [LG2012].
-L. Breiman, “Bagging predictors”, Machine Learning, 24(2), 123-140, 1996.}
 
 \textit{Random forests use a perturb-and-combine technique [Breiman, “Arcing Classifiers”, Annals of Statistics 1998.] specifically designed for trees. This means a diverse set of classifiers is created by introducing randomness in the classifier construction. The prediction of the ensemble is given as the averaged prediction of the individual classifiers.}
 
