--- a/vaIn_ref_figure_biasVariance_Hastie__.tex
+++ b/vaIn_ref_figure_biasVariance_Hastie__.tex
@@ -1,4 +1,4 @@
-vaIn \ref{figure-biasVariance} Hastie et al. fit a regression model on data to illustrate on the interaction between bias and variance. The model increases complexity when using a greater number of features, more variables need to be fit during the optimization procedure. Thus the model increases in complexity (measured in degrees of freedom). 
+In \ref{figure-biasVariance} Hastie et al. fit a regression model on data to illustrate on the interaction between bias and variance. The model increases complexity when using a greater number of features, more variables need to be fit during the optimization procedure. Thus the model increases in complexity (measured in degrees of freedom). 
 
 At first the bias of the model is high both for the training and testing sets. The interpretation is that the model has high bias. Then the prediction error decreases as complexity increases. This behavior is expected because the model learns to better fit the data. At first, the expected prediction error, estimated by averaging over the test set' prediction error's, also decreases when the model's complexity is increased. However when the model starts to overfit the data, the expected prediction error starts to rise. A common heuristic to select the best model is to stop increasing the model's complexity once the $EPE$ stops decreasing.
 
@@ -18,7 +18,7 @@ The four possible combinations of high
 
 
 
-\subsection{Convergence of the }
+\subsection{Brief comment on the convergence of the Training Error and the Vapnik–Chervonenkis Dimension}
 \textbf{Vapnik–Chervonenkis Dimension}
 \cite{vapnik-nature2013}
 \cite{cherkassky-learning2007}
@@ -38,7 +38,7 @@ A set $T$ is said to be shattered by $\mathcal {F}$ if all of its subsets are pi
 \begin{definition}{Vapnik–Chervonenkis (VC) Dimension}
  	
  	The Vapnik–Chervonenkis Dimension (VC) of a class of binary functions is the cardinality of the largest set which is shattered by $\mathcal {F}$.
-\end{definition}\footnote{The VC dimension is briefly introduced here for }
+\end{definition}\footnote{The VC dimension is briefly introduced here for support on the methods  \cite{cherkassky-learning2007} }
  
 Given that all functions can be 
  
